# FPGA-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: example_debug_report.md
examples/demo_project/constrs/: top.xdc
examples/demo_project/reports/: timing_summary.rpt
examples/demo_project/rtl/: async_fifo_stub.sv  cdc_sync_2ff.sv  top_lvds_rx.sv
src/fpga_debug_agent/: __init__.py  cli.py  config.py  graph.py  llm.py  models.py
src/fpga_debug_agent/agents/: base.py  constraint_checker.py  executor.py  planner.py  repair_agent.py  rtl_parser.py  sim_analyzer.py  timing_analyzer.py
src/fpga_debug_agent/parsers/: sim_log.py  timing_report.py  verilog.py  xdc.py
src/fpga_debug_agent/reports/: markdown.py
src/fpga_debug_agent/runners/: vivado.py
tests/: test_timing_report.py  test_verilog_parser.py  test_xdc_parser.py
